--- a/quanlykho/nbproject/project.properties
+++ b/quanlykho/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=quanlykho
+application.vendor=Admins
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,31 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/quanlykho.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.11.jar=lib/commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=lib/commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=lib/commons-compress-1.18.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar/jcalendar-1.4.jar
+file.reference.jfreechart-1.5.0.jar=lib/jfreechart-1.5.0.jar
+file.reference.mysql-connector-java-8.0.25.jar=lib/mysql-connector-java-8.0.25.jar
+file.reference.poi-4.0.1.jar=lib/poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=lib/poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=lib/poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=lib/xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.jfreechart-1.5.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +76,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=quanlykho.Quanlykho
+main.class=QLK.Login.login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
