--- a/quanlykho/resources/remember.properties
+++ b/quanlykho/resources/remember.properties
@@ -1,4 +1,4 @@
 #Remember password
-#Thu Dec 23 02:36:59 PST 2021
-password=123456
-userName=ThuHa
+#Sun Jun 19 21:08:26 ICT 2022
+password=12
+userName=admin
