--- a/quanlykho/resources/remember.properties
+++ b/quanlykho/resources/remember.properties
@@ -1,4 +1,4 @@
 #Remember password
-#Sun Jun 19 21:08:26 ICT 2022
-password=12
-userName=admin
+#Mon Jun 20 03:01:46 ICT 2022
+password=1
+userName=ad
