--- a/quanlykho/resources/Nv_Now.properties
+++ b/quanlykho/resources/Nv_Now.properties
@@ -1,5 +1,5 @@
 #Nhân viên hiê\u0323n ta\u0323i
-#Thu Dec 23 02:36:59 PST 2021
-MaNV=nv002
-Chucvu=Qua\u0309n tri\u0323 \:
-hoten=B\u00F9i Th\u1ECB Duy\u00EAn
+#Mon Jun 20 03:01:46 ICT 2022
+MaNV=NV01
+Chucvu=Qua\u0309n tri\u0323
+hoten=Nguy\u1EC5n Quang B\u1EA3o
