--- a/quanlykho/resources/Nv_Now.properties
+++ b/quanlykho/resources/Nv_Now.properties
@@ -1,2 +1,5 @@
 #Nhân viên hiê\u0323n ta\u0323i
-#Mon Jun 20 03:10:11 ICT 2022
+#Mon Jun 20 08:34:19 ICT 2022
+MaNV=NV03
+Chucvu=Nh\u00E2n vi\u00EAn
+hoten=Nguy\u1EC5n Ngh\u0129a Ninh
