--- a/quanlykho/resources/remember.properties
+++ b/quanlykho/resources/remember.properties
@@ -1,4 +1,4 @@
 #Remember password
-#Mon Jun 20 03:10:07 ICT 2022
-password=1
-userName=ad
+#Mon Jun 20 08:34:19 ICT 2022
+password=123
+userName=nhanvien
